# cc-soul

./: .gitignore  .mcp.json  CLAUDE.lean.md  CLAUDE.md  README.md  SCALE_100M_PLAN.md  chitta-cli.sh  claude-progress.json  pyproject.toml  setup.sh  synapse-cli.sh
.claude-plugin/: marketplace.json  mcp.json  plugin.json  skills
.claude-plugin/chitta/: CMakeLists.txt
.claude-plugin/scripts/: smart-install.sh  soul-hook.sh
.claude/agents/: yajna-processor.md
.claude/handoffs/: handoff-20251229_043429_306490.md  handoff-20251229_043657_114698.md  handoff-20251229_044011_818362.md  handoff-20251229_044717_873672.md  handoff-20251229_050246_794825.md  handoff-20251229_052603_798184.md  handoff-20251229_054004_932443.md  handoff-20251229_055148_617835.md  handoff-20251229_071437_781536.md  handoff-20251229_073455_168840.md  handoff-20251229_073455_228604.md  handoff-20251229_073455_285451.md  handoff-20251229_073455_566155.md  handoff-20251229_073455_627658.md  handoff-20251229_073455_690446.md  handoff-20251229_073458_164847.md  handoff-20251229_073740_926812.md  handoff-20251229_073740_983365.md  handoff-20251229_073741_037029.md  handoff-20251229_073741_312724.md  handoff-20251229_073741_374347.md  handoff-20251229_073741_438682.md  handoff-20251229_073743_856683.md  handoff-20251229_075305_908499.md  handoff-20251229_130140_799704.md  handoff-20251229_130611_632439.md  handoff-20251229_135336_820580.md  handoff-20251229_171448_778725.md  handoff-20251229_171448_839770.md  handoff-20251230_080538_506028.md  handoff-20251230_082704_383343.md  handoff-20251230_085656_518931.md  handoff-20251230_093425_572475.md  handoff-20251230_093427_022370.md  handoff-20251230_093428_566571.md  handoff-20251230_093434_807088.md  handoff-20251230_093436_300280.md  handoff-20251230_093437_829210.md  handoff-20251230_093511_234017.md  handoff-20251230_095828_986239.md  (+9 more)
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml
.scripts/: README.md  debug_brain_spread.py  extract_mcp_tools.py  migrate_claude_mem.py  reorganize_mcp_tools.py  test_antahkarana_convergence.py  test_auto_learning.py  test_convergence.py  test_ledger.py  test_swarm_ccmemory.py  test_swarm_spawner.py  validate_brain.py  validate_minimal_context.py  validate_signals.py
bootstrap/: cc-soul.soul  code-intel.soul
chitta/: CMakeLists.txt
chitta/.cache/clangd/index/: attractor_dampener.hpp.8DAA78029D8CEF8C.idx  blob_store.hpp.38EC9BAD41F57F64.idx  chitta.hpp.69550813DE70710C.idx  cli.cpp.7C84AC45339CCBB0.idx  connection_pool.hpp.1048622AFE56C44D.idx  daemon.hpp.3041879D22D5D003.idx  dream.hpp.47CCC8124E06B964.idx  dynamics.hpp.5908F26786B81E4A.idx  epiplexity_test.hpp.4F1E29EF13AA2E77.idx  eval_harness.hpp.CAC12D670E9535FD.idx  feedback.hpp.06A1837A725092F9.idx  gap_inquiry.hpp.96CDFB51FC4983DC.idx  graph.hpp.98A22766DB3E7624.idx  graph_store.hpp.AAF42AF7807A92DB.idx  handler.hpp.2C48E923E678FEDF.idx  hilbert.hpp.0F88C96A50815099.idx  hnsw.hpp.6D3524A0A95DA717.idx  import.cpp.24F96BE8FFB5578F.idx  learning.hpp.F8016C373FD99296.idx  memory.hpp.0DC36A205B5DDABC.idx  migrate.cpp.AB8FBD46D98AC62D.idx  migrations.hpp.E36887F03E7228A7.idx  mind.hpp.6077C3698E02AAA6.idx  mmap.hpp.25C5D6C0B8B6A5DC.idx  mmap_graph_store.hpp.156CA080F1F07102.idx  ops.hpp.B379F53685552ABD.idx  protocol.hpp.F254E15044CD1F5B.idx  provenance.hpp.BC244599E2ABB81D.idx  quantized.hpp.C12E7A3631B1970D.idx  query_router.hpp.74551D79455F3A5E.idx  quota_manager.hpp.A430E4BFD37BF91B.idx  realm_scoping.hpp.54EB3CDAAE3049DA.idx  review_queue.hpp.5130FB95B77C96F1.idx  rpc.hpp.E22730D850ECE4A8.idx  rpc_server.cpp.7EB5E04FD7F5D84F.idx  scoring.hpp.F5F3A959CBF2146D.idx  segment_manager.hpp.89D7C7376B6303C5.idx  socket_client.cpp.B42BFB0640101D1B.idx  socket_client.hpp.A86CCE1C4F67EAAF.idx  socket_server.cpp.C3963A654840A1E9.idx  (+16 more)
chitta/include/chitta/: attractor_dampener.hpp  blob_store.hpp  chitta.hpp  connection_pool.hpp  daemon.hpp  dream.hpp  dynamics.hpp  epiplexity_test.hpp  eval_harness.hpp  file_tracker.hpp  gap_inquiry.hpp  graph.hpp  graph_store.hpp  hierarchical_state.hpp  hilbert.hpp  hnsw.hpp  mcp.hpp  migrations.hpp  mind.hpp  mmap.hpp  mmap_graph_store.hpp  ops.hpp  provenance.hpp  quantized.hpp  query_router.hpp  quota_manager.hpp  realm_scoping.hpp  review_queue.hpp  rpc.hpp  scoring.hpp  segment_manager.hpp  socket_client.hpp  socket_server.hpp  storage.hpp  synthesis_queue.hpp  tag_index.hpp  truth_maintenance.hpp  types.hpp  unified_index.hpp  utility_decay.hpp  (+6 more)
chitta/include/chitta/mcp/: handler.hpp  protocol.hpp  types.hpp
chitta/include/chitta/mcp/tools/: learning.hpp  memory.hpp
chitta/include/chitta/mind/: structs.hpp  tag_index.hpp  types.hpp
chitta/include/chitta/rpc/: handler.hpp  protocol.hpp  types.hpp
chitta/include/chitta/rpc/tools/: code_intel.hpp  learning.hpp  memory.hpp  yajna.hpp
chitta/include/synapse/: daemon.hpp  dynamics.hpp  scoring.hpp  storage.hpp  synapse.hpp  vak.hpp  voice.hpp
chitta/python/: synapse_mcp.py
chitta/src/: cli.cpp  import.cpp  mcp_server.cpp  migrate.cpp  rpc_server.cpp  socket_client.cpp  socket_server.cpp  test.cpp
commands/: cc-soul-setup.md  cc-soul-shutdown.md  cc-soul-status.md  cc-soul-update.md
docs/: API.md  ARCHITECTURE.md  CLI.md  HOOKS.md  ORACLE.md  PHASE2_DESIGN.md  PHASE2_SCALABLE_DESIGN.md  PHILOSOPHY.md  TRIPLE-STORE-DESIGN.md
docs/architecture/: ātma-dhāraṇā.md
hooks/: hooks.json  ledger-autosave.sh
scripts/: capture-hook.sh  extract-code-intel.sh  post-commit-hook.sh  release.sh  session-tracker.sh  smart-inject.sh  smart-install.sh  soul-hook.sh  soul-prime.sh  stop-hook.sh  subconscious.sh  token-savings.sh  trigger-hook.sh  yajna-batch.sh
synapse/: CMakeLists.txt
synapse/include/synapse/: feedback.hpp  graph.hpp  hnsw.hpp  mcp.hpp  mind.hpp  ops.hpp  quantized.hpp  types.hpp  vak_onnx.hpp
synapse/src/: mcp_server.cpp
tests/: conftest.py  test_cli.py  test_core.py  test_curiosity.py  test_intentions.py  test_narrative.py  test_observe.py  test_outcomes.py  test_soul_agent.py  test_spanda.py  test_temporal.py  test_ultrathink.py  test_wisdom.py
(+149 files in other folders)
