[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-soul"
version = "0.1.0"
description = "Persistent Identity for Claude Code - A living soul that learns from experience"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Claude & Human", email = "noreply@anthropic.com"}
]
keywords = ["claude", "claude-code", "ai", "memory", "identity", "wisdom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cc-memory @ git+https://github.com/genomewalker/cc-memory.git",
    "lancedb>=0.1.0",
    "sentence-transformers>=2.0.0",
    "pyarrow>=12.0.0",
    "kuzu>=0.4.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
soul = "cc_soul.cli:main"
cc-soul = "cc_soul.cli:main"
soul-mcp = "cc_soul.mcp_server:main"

[project.urls]
Homepage = "https://github.com/genomewalker/cc-soul"
Repository = "https://github.com/genomewalker/cc-soul"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cc_soul = ["py.typed", "skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pytz.*",
    "ignore::DeprecationWarning:dateutil.*",
]
